Adding report charts - Part 4

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -395,6 +395,7 @@
   <script src="/js/drawflow.js" type="module"></script>
   <script src="/js/dashboard.js" type="module"></script>
   <script src="/js/radarChartEvcReport.js"></script>
+  <script src="/js/gaugeChartEvcReport.js"></script>
 </body>
 
 </html>
