Adding report charts - Part 10

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -389,6 +389,7 @@
   <script src="/js/flow.js"></script>
   <script src="/js/animated.js"></script>
   <script src="/js/core/bootstrap.bundle.min.js"></script>
+  <script src="/js/math.js"></script>
   <script src="/js/existing.js"></script>
   <script src="/js/common.js"></script>
   <script src="/js/loadingoverlay.min.js"></script>
