Adding report charts - Part 11

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -190,9 +190,9 @@
                 <i class="material-icons opacity-10">person</i>
               </div>
               <div class="text-end pt-1">
-                <p class="text-sm mb-0 text-capitalize">Aluno mais motivado</p>
-                <h4 class="mb-0">Fulano</h4>
-              </div>
+                <p class="text-sm mb-0 text-capitalize">ALUNO(A) MAIS MOTIVADO(A)</p>
+                <h5 class="mb-0" id="labelMoreMotivatedStudent">---</h5>
+              </div><br/>
               <ul class="nav nav-tabs" role="tablist">
                 <li class="nav-item" role="presentation">
                   <button class="nav-link active custom-border-white" data-bs-toggle="tab" data-bs-target="#moreMotivatedStudentDiv" type="button" role="tab" aria-selected="true">E-V-C</button>
@@ -207,6 +207,9 @@
               <div id="moreMotivatedStudentDiv2" class="radar-chart-motivated tab-pane fade"></div>
             </div>
             <hr class="dark horizontal my-0">
+            <div class="card-footer p-3 align-right">
+              <p class="mb-0"><span class="text-success text-sm font-weight-bolder"><a href="#">[MAIS]</a></span></p>
+            </div>
           </div>
         </div>
         <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
@@ -216,9 +219,9 @@
                 <i class="material-icons opacity-10">person</i>
               </div>
               <div class="text-end pt-1">
-                <p class="text-sm mb-0 text-capitalize">Aluno menos motivado</p>
-                <h4 class="mb-0">Beltrano</h4>
-              </div>
+                <p class="text-sm mb-0 text-capitalize">ALUNO(A) MENOS MOTIVADO(A)</p>
+                <h5 class="mb-0" id="labelLessMotivatedStudent">---</h5>
+              </div><br/>
               <ul class="nav nav-tabs" role="tablist">
                 <li class="nav-item" role="presentation">
                   <button class="nav-link active custom-border-white" data-bs-toggle="tab" data-bs-target="#lessMotivatedStudentDiv" type="button" role="tab" aria-selected="true">E-V-C</button>
@@ -233,6 +236,9 @@
               <div id="lessMotivatedStudentDiv2" class="radar-chart-motivated tab-pane fade"></div>
             </div>
             <hr class="dark horizontal my-0">
+            <div class="card-footer p-3 align-right">
+              <p class="mb-0"><span class="text-success text-sm font-weight-bolder"><a href="#">[MAIS]</a></span></p>
+            </div>
           </div>
         </div>
         <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
@@ -242,9 +248,9 @@
                 <i class="material-icons opacity-10">dataset</i>
               </div>
               <div class="text-end pt-1">
-                <p class="text-sm mb-0 text-capitalize">Curso mais motivado</p>
-                <h4 class="mb-0">Ciência da Computação</h4>
-              </div>
+                <p class="text-sm mb-0 text-capitalize">CURSO MAIS MOTIVADO</p>
+                <h5 class="mb-0" id="labelMoreMotivatedCourse">---</h5>
+              </div><br/>
               <ul class="nav nav-tabs" role="tablist">
                 <li class="nav-item" role="presentation">
                   <button class="nav-link active custom-border-white" data-bs-toggle="tab" data-bs-target="#moreMotivatedCoursetDiv" type="button" role="tab" aria-selected="true">E-V-C</button>
@@ -259,6 +265,9 @@
               <div id="moreMotivatedCoursetDiv2" class="radar-chart-motivated tab-pane fade"></div>
             </div>
             <hr class="dark horizontal my-0">
+            <div class="card-footer p-3 align-right">
+              <p class="mb-0"><span class="text-success text-sm font-weight-bolder"><a href="#">[MAIS]</a></span></p>
+            </div>
           </div>
         </div>
         <div class="col-xl-3 col-sm-6">
@@ -268,9 +277,9 @@
                 <i class="material-icons opacity-10">dataset</i>
               </div>
               <div class="text-end pt-1">
-                <p class="text-sm mb-0 text-capitalize">Curso menos motivado</p>
-                <h4 class="mb-0">Física</h4>
-              </div>
+                <p class="text-sm mb-0 text-capitalize">CURSO MENOS MOTIVADO</p>
+                <h5 class="mb-0" id="labelLessMotivatedCourse">---</h5>
+              </div><br/>
               <ul class="nav nav-tabs" role="tablist">
                 <li class="nav-item" role="presentation">
                   <button class="nav-link active custom-border-white" data-bs-toggle="tab" data-bs-target="#lessMotivatedCoursetDiv" type="button" role="tab" aria-selected="true">E-V-C</button>
@@ -285,6 +294,9 @@
               <div id="lessMotivatedCoursetDiv2" class="radar-chart-motivated tab-pane fade"></div>
             </div>
             <hr class="dark horizontal my-0">
+            <div class="card-footer p-3 align-right">
+              <p class="mb-0"><span class="text-success text-sm font-weight-bolder"><a href="#">[MAIS]</a></span></p>
+            </div>
           </div>
         </div>
       </div>
