--- a/html/results.html
+++ b/html/results.html
@@ -144,7 +144,7 @@
         <div class="card-header pb-0">
           <div class="row">
             <div class="col-lg-12 col-7 text-yellow">
-              <h6 class="text-xl">IMPACTO INDIVIDUAL DA OPÇÃO [<span class="text-yellow" id="labelImpactOption">---</span>]</h6>
+              <h6 class="text-xl">IMPACTO INDIVIDUAL DA OPÇÃO "<u><span id="labelImpactOption">---</span></u>"</h6>
               <p>* Do mais impactado negativamente para o menos impactado</p>
             </div>
           </div>
