Adding report charts - Part 20

--- a/html/results.html
+++ b/html/results.html
@@ -196,6 +196,7 @@
 <script src="/js/sweet-alert.js"></script>
 <script src="/js/jsonata.min.js"></script>
 <script src="/js/underscore.js"></script>
+<script src="/js/underscore-move.js"></script>
 <script src="/js/amCharts.js"></script>
 <script src="/js/notify.min.js"></script>
 <script src="/js/flow.js"></script>
