--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -178,6 +178,18 @@
               <br/>
               <div class="sankeyChartDiv" id="sankeyChartDiv"></div>
               <br/>
+              <div class="d-flex">
+                <i class="material-icons text-sm my-auto me-1">info</i>
+                <p class="mb-0 text-sm"> Decisões na cor <b><span class="color-green">VERDE</span></b> já foram tomadas. </p>
+              </div>
+              <div class="d-flex">
+                <i class="material-icons text-sm my-auto me-1">info</i>
+                <p class="mb-0 text-sm"> Decisões na cor <b><span class="color-orange">LARANJA</span></b> está sendo avaliadas. </p>
+              </div>
+              <div class="d-flex">
+                <i class="material-icons text-sm my-auto me-1">info</i>
+                <p class="mb-0 text-sm"> Decisões na cor <b><span class="color-grey">CINZA</span></b> ainda não possuem avaliações. </p>
+              </div>
             </div>
           </div>
         </div>
@@ -315,9 +327,6 @@
               <h6 class="mb-0 "> Evolução geral da motivação </h6>
               <p class="text-sm "> --- </p>
               <hr class="dark horizontal">
-              <div class="card-footer p-1 align-right">
-                <p class="mb-0"><span class="text-success text-sm font-weight-bolder"><a href="#">[MAIS]</a></span></p>
-              </div>
             </div>
           </div>
         </div>
@@ -334,9 +343,6 @@
               <h6 class="mb-0 "> Evolução geral da motivação </h6>
               <p class="text-sm "> --- </p>
               <hr class="dark horizontal">
-              <div class="card-footer p-1 align-right">
-                <p class="mb-0"><span class="text-success text-sm font-weight-bolder"><a href="#">[MAIS]</a></span></p>
-              </div>
             </div>
           </div>
         </div>
@@ -353,9 +359,6 @@
               <h6 class="mb-0 "> Evolução geral da motivação </h6>
               <p class="text-sm "> --- </p>
               <hr class="dark horizontal">
-              <div class="card-footer p-1 align-right">
-                <p class="mb-0"><span class="text-success text-sm font-weight-bolder"><a href="#">[MAIS]</a></span></p>
-              </div>
             </div>
           </div>
         </div>
