Adding final charts - PART 3

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -317,10 +317,8 @@
         <div class="col-lg-4 col-md-6 mt-4 mb-4">
           <div class="card ">
             <div class="card-header p-0 position-relative mt-n4 mx-3 bg-transparent">
-              <div class="bg-gradient-dark shadow-dark border-radius-lg py-3 pe-1">
-                <div class="chart">
-                  <canvas id="chart-bars" class="chart-canvas" height="170"></canvas>
-                </div>
+              <div class="bg-gradient-dark shadow-dark border-radius-lg">
+                <div id="allStudentsBubbleMotivationDiv" class="bubble-chart-custom"></div>
               </div>
             </div>
             <div class="card-body">
@@ -425,6 +423,7 @@
   <script src="/js/jsonata.min.js"></script>
   <script src="/js/underscore.js"></script>
   <script src="/js/index.js"></script>
+  <script src="/js/hierarchy.js"></script>
   <script src="/js/xy.js"></script>
   <script src="/js/radar.js"></script>
   <script src="/js/animatedChart.js"></script>
@@ -438,9 +437,10 @@
   <script src="/js/common.js"></script>
   <script src="/js/loadingoverlay.min.js"></script>
   <script src="/js/drawflow.js" type="module"></script>
-  <script src="/js/dashboard.js" type="module"></script>
   <script src="/js/radarChartEvcReport.js"></script>
   <script src="/js/gaugeChartEvcReport.js"></script>
+  <script src="/js/bubbleChartEvcReport.js"></script>
+  <script src="/js/dashboard.js" type="module"></script>
 </body>
 
 </html>
