Adding final charts - PART 6

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -144,7 +144,6 @@
                 <button id="btZoomReset" class="btn btn-outline-white" data-toggle="tooltip" title="Resetar Zoom"><i class="material-icons icon-button">zoom_out_map</i></button>
                 <button id="btZoomIn" class="btn btn-outline-white" data-toggle="tooltip" title="Zoom In"><i class="material-icons icon-button">zoom_in</i></button>
                 <button id="btSave" class="btn btn-outline-white" data-toggle="tooltip" title="Salvar dados do projeto"><i class="material-icons icon-button">save</i></button>
-                <button id="btTest" class="btn btn-outline-white" data-toggle="tooltip" title="Testes"><i class="material-icons icon-button">bolt</i></button>
               </div>
               <br/>
               <div id="projectConfigCanvas" class="project-config-canvas"></div>
@@ -322,9 +321,12 @@
               </div>
             </div>
             <div class="card-body">
-              <h6 class="mb-0 "> Evolução geral da motivação </h6>
-              <p class="text-sm "> --- </p>
+              <h6 class="mb-0 "> Motivação da Equipe </h6>
               <hr class="dark horizontal">
+              <div class="d-flex">
+                <i class="material-icons text-sm my-auto me-1">info</i>
+                <p class="mb-0 text-sm"> Quanto maior o círculo, maior a motivação. </p>
+              </div>
             </div>
           </div>
         </div>
