--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -333,32 +333,34 @@
         <div class="col-lg-4 col-md-6 mt-4 mb-4">
           <div class="card  ">
             <div class="card-header p-0 position-relative mt-n4 mx-3 bg-transparent">
-              <div class="bg-gradient-success shadow-success border-radius-lg py-3 pe-1">
-                <div class="chart">
-                  <canvas id="chart-line" class="chart-canvas" height="170"></canvas>
-                </div>
+              <div class="bg-gradient-success shadow-success border-radius-lg">
+                <div id="allStudentsMotivationDiv" class="bubble-chart-custom"></div>
               </div>
             </div>
             <div class="card-body">
-              <h6 class="mb-0 "> Evolução geral da motivação </h6>
-              <p class="text-sm "> --- </p>
+              <h6 class="mb-0 "> Evolução da motivação da equipe </h6>
               <hr class="dark horizontal">
+              <div class="d-flex">
+                <i class="material-icons text-sm my-auto me-1">info</i>
+                <p class="mb-0 text-sm"> Segure SHIFT e utilize o SCROLL do MOUSE para aplicar ZOOM. </p>
+              </div>
             </div>
           </div>
         </div>
         <div class="col-lg-4 mt-4 mb-3">
           <div class="card ">
             <div class="card-header p-0 position-relative mt-n4 mx-3 bg-transparent">
-              <div class="bg-gradient-dark shadow-dark border-radius-lg py-3 pe-1">
-                <div class="chart">
-                  <canvas id="chart-line-tasks" class="chart-canvas" height="170"></canvas>
-                </div>
+              <div class="bg-gradient-dark shadow-dark border-radius-lg">
+                <div id="generalMotivationDiv" class="bubble-chart-custom"></div>
               </div>
             </div>
             <div class="card-body">
               <h6 class="mb-0 "> Evolução geral da motivação </h6>
-              <p class="text-sm "> --- </p>
               <hr class="dark horizontal">
+              <div class="d-flex">
+                <i class="material-icons text-sm my-auto me-1">info</i>
+                <p class="mb-0 text-sm"> Segure SHIFT e utilize o SCROLL do MOUSE para aplicar ZOOM. </p>
+              </div>
             </div>
           </div>
         </div>
@@ -442,6 +444,7 @@
   <script src="/js/radarChartEvcReport.js"></script>
   <script src="/js/gaugeChartEvcReport.js"></script>
   <script src="/js/bubbleChartEvcReport.js"></script>
+  <script src="/js/lineChartEvcReport.js"></script>
   <script src="/js/dashboard.js" type="module"></script>
 </body>
 
