Adding final charts - PART 9

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -426,11 +426,13 @@
   <script src="/js/sweet-alert.js"></script>
   <script src="/js/jsonata.min.js"></script>
   <script src="/js/underscore.js"></script>
+  <script src="/js/moment-with-locales.js"></script>
   <script src="/js/index.js"></script>
   <script src="/js/hierarchy.js"></script>
   <script src="/js/xy.js"></script>
   <script src="/js/radar.js"></script>
   <script src="/js/animatedChart.js"></script>
+  <script src="/js/pt_BR.js"></script>
   <script src="/js/notify.min.js"></script>
   <script src="/js/flow.js"></script>
   <script src="/js/animated.js"></script>
