Adding final charts - PART 14

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -138,11 +138,15 @@
                   <option value="0">Decisão</option>
                   <option value="-2" class="select-divider">-- STAKEHOLDERS --</option>
                 </select>
-                <button id="btReset" class="btn btn-outline-white" data-toggle="tooltip" title="Limpar tudo"><i class="material-icons icon-button">autorenew</i></button>
-                <button id="btImport" class="btn btn-outline-white" data-toggle="tooltip" title="Recarregar dados do projeto"><i class="material-icons icon-button">downloading</i></button>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <button id="btImport" class="btn btn-outline-white" data-toggle="tooltip" title="Recarregar dados salvos do projeto"><i class="material-icons icon-button">autorenew</i></button>
+                <button id="btReset" class="btn btn-outline-white" data-toggle="tooltip" title="Limpar tudo (sem salvar)"><i class="material-icons icon-button">delete</i></button>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <button id="btZoomOut" class="btn btn-outline-white" data-toggle="tooltip" title="Zoom Out"><i class="material-icons icon-button">zoom_out</i></button>
                 <button id="btZoomReset" class="btn btn-outline-white" data-toggle="tooltip" title="Resetar Zoom"><i class="material-icons icon-button">zoom_out_map</i></button>
+                <button id="btZoomDefault" class="btn btn-outline-white" data-toggle="tooltip" title="Zoom Padrão"><i class="material-icons icon-button">center_focus_weak</i></button>
                 <button id="btZoomIn" class="btn btn-outline-white" data-toggle="tooltip" title="Zoom In"><i class="material-icons icon-button">zoom_in</i></button>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <button id="btSave" class="btn btn-outline-white" data-toggle="tooltip" title="Salvar dados do projeto"><i class="material-icons icon-button">save</i></button>
               </div>
               <br/>
