--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -105,7 +105,7 @@
             <li class="nav-item d-flex align-items-center">
               <i class="fa fa-user me-sm-1"></i>&nbsp;
               <span id="labelUserName">---</span>&nbsp;
-              <a href="/user/profile" class="nav-link text-body font-weight-bold px-1 cursor-pointer">
+              <a href="/users/profile" class="nav-link text-body font-weight-bold px-1 cursor-pointer">
                 <span class="d-sm-inline d-none">[Perfil]</span>
               </a>
               <a id="btLogout" class="nav-link text-body font-weight-bold px-1 cursor-pointer">
