Adding user profile - PART 4

--- a/html/profile.html
+++ b/html/profile.html
@@ -121,23 +121,23 @@
   <!-- End Navbar -->
   <div class="container-fluid py-4">
     <div style="width: 50%; margin: auto">
-      <form role="form" id="formSignup">
+      <form role="form" id="formProfile" enctype="multipart/form-data">
         <b>Nome:</b>
         <div class="input-group input-group-outline mb-3">
-          <input onClick="this.select();" id="inputTextName" type="text" class="form-control"/>
+          <input onClick="this.select();" name="name" id="inputTextName" type="text" class="form-control"/>
         </div>
         <b>Login:</b>
         <div class="input-group input-group-outline mb-3">
-          <input onClick="this.select();" id="inputTextLogin" type="text" class="form-control"/>
+          <input onClick="this.select();" name="login" id="inputTextLogin" type="text" class="form-control"/>
         </div>
         <b>Curso</b>
         <div class="input-group input-group-outline mb-3">
-          <select id="selectCourse" class="form-select select-course">
+          <select name="idCourse" id="selectCourse" class="form-select select-course">
           </select>
         </div>
         <b>Sexo</b>
         <div class="input-group input-group-outline mb-3">
-          <select id="selectGender" class="form-select select-course">
+          <select name="gender" id="selectGender" class="form-select select-course">
             <option value="M">Masculino</option>
             <option value="F">Feminino</option>
             <option value="O">Outro</option>
@@ -145,20 +145,20 @@
         </div>
         <b>Data de Nascimento:</b>
         <div class="input-group input-group-outline mb-3">
-          <input onClick="this.select();" id="inputBirthdayDate" type="text" class="form-control"/>
+          <input name="birthdayDate" onClick="this.select();" id="inputBirthdayDate" type="text" class="form-control"/>
         </div>
         <b>Foto do Perfil:</b>
         <div class="input-group input-group-outline mb-3">
-          <input class="form-control form-control" id="photoFile" type="file"/>
+          <input class="form-control form-control" name="avatarPhoto" type="file" accept=".jpg"/>
         </div>
         <br/><br/>
         <div class="input-group input-group-outline mb-3">
           <label for="inputTextPassword1" class="form-label">Senha</label>
-          <input onClick="this.select();" id="inputTextPassword1" type="password" class="form-control"/>
+          <input onClick="this.select();" name="password1" id="inputTextPassword1" type="password" class="form-control"/>
         </div>
         <div class="input-group input-group-outline mb-3">
           <label for="inputTextPassword2" class="form-label">Repetir Senha</label>
-          <input onClick="this.select();" id="inputTextPassword2" type="password" class="form-control"/>
+          <input onClick="this.select();" name="password2" id="inputTextPassword2" type="password" class="form-control"/>
         </div>
         <br/>
         <div class="text-center">
